--- a/app/views/admin/index.html.slim
+++ b/app/views/admin/index.html.slim
@@ -15,6 +15,8 @@
         = link_to 'mødelokaler' , meetingrooms_path
       li
         = link_to 'virksomheder' , companies_path
+      li
+        = link_to "reservationer" , bookings_path
 
 
 
