--- a/app/views/history/index.html.slim
+++ b/app/views/history/index.html.slim
@@ -6,16 +6,15 @@
         = render :partial => "shared/menu"
       .content
 
-
         h1
           =raw @history.title
         =raw @history.body      
 	    - if can?(:edit, @history)
 	      .text-right
-	        = link_to t('admin.edit'), edit_page_path(@history)
+	        = link_to t('admin.edit'), edit_page_path(@history), :class => 'button'
 
   .squared-box
-    .borders
+    .borders.image-box
       = image_tag 'frontpage-house.jpg', :border => 'none', :class => 'image_fix'
 
 = render :partial => "shared/news", :locals => { :newsposts => @newsposts }
