--- a/app/views/admin/index.html.slim
+++ b/app/views/admin/index.html.slim
@@ -1,25 +1,37 @@
-- if user_signed_in? && current_user.admin_or_super?
-  .single-column
-    h1
-      = t('admin.administration')
-    ul
-      li
-        = link_to t('admin.users'), users_path
-      li
-        = link_to t('admin.illustrations'), illustrations_path
-      li
-        = link_to t('admin.pages'), pages_path
-      li
-        = link_to 'nyheder' , newsposts_path
-      li
-        = link_to 'mødelokaler' , meetingrooms_path
-      li
-        = link_to 'virksomheder' , companies_path
-      li
-        = link_to "reservationer" , bookings_path
+.grid-container
+
+  .squared-box
+    .borders.fixed-height
+      .menu-box
+        = render :partial => "shared/menu"
+      .content
+        .content-top
+
+          h1
+            = t('admin.administration')
+          ul
+            li
+              = link_to t('admin.users'), users_path
+            li
+              = link_to t('admin.illustrations'), illustrations_path
+            li
+              = link_to t('admin.pages'), pages_path
+            li
+              = link_to 'nyheder' , newsposts_path
+            li
+              = link_to 'mødelokaler' , meetingrooms_path
+            li
+              = link_to 'virksomheder' , companies_path
+            li
+              = link_to "reservationer" , bookings_path
+
+  .squared-box
+    .borders.fixed-height
+      = image_tag 'frontpage-house.jpg', :border => 'none', :class => 'image_fix'
+
+= render :partial => "shared/news", :locals => { :newsposts => @newsposts }
 
 
 
 
-- else
-  = render :partial => "shared/no_access"
+
