--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -5,16 +5,17 @@
       .menu-box
         = render :partial => "shared/menu"
       .content
-        - if can?(:edit, @company)
-	      = link_to t('admin.edit'), edit_company_path(@company)
-          |  | 
-          = link_to t('admin.delete'), @company, :confirm => t('admin.are_you_sure'), :method => :delete
         h1
           = @company.title
         =raw @company.body
+        - if can?(:edit, @company)
+          .edit
+	        = link_to t('admin.edit'), edit_company_path(@company), :class =>'button'
+            |  -  
+            = link_to t('admin.delete'), @company, :confirm => t('admin.are_you_sure'), :method => :delete, :class =>'button'
 
 	    
-  .squared-box
+  .squared-box.fixed-height
     .borders
       div style="width:458px; height:376px; overflow:hidden"
         = image_tag @company.image.url(:preview), :border => 'none', :class => 'image_fix'
