mettingrooms ruby vertion fix test

--- a/app/views/meetingrooms/_form.html.slim
+++ b/app/views/meetingrooms/_form.html.slim
@@ -25,6 +25,6 @@
   
     .actions
         = f.submit 'Gem', disable_with: 'Saving...'
-        = image_tag "loader.gif", alt: "", width: "32", height: "32", style: "display: none;", class: 'spinner'
+        -#= image_tag "loader.gif", alt: => "", width: => "32", height: => "32", style: => "display: none;", :class =>  'spinner'
   
   
