ruby 1.8.2 support on meetingrooms new

--- a/app/views/meetingrooms/_form.html.slim
+++ b/app/views/meetingrooms/_form.html.slim
@@ -24,7 +24,7 @@
       = f.text_area :body
   
     .actions
-        = f.submit 'Gem', disable_with: 'Saving...'
-        -#= image_tag "loader.gif", alt: => "", width: => "32", height: => "32", style: => "display: none;", :class =>  'spinner'
+        = f.submit 'Gem', :disable_with =>  'Saving...'
+        = image_tag "loader.gif", :alt => "", :width => "32", :height => "32", :style => "display: none;", :class =>  'spinner'
   
   
