bookings fix rails 1.8.2

--- a/app/views/bookings/_form.html.slim
+++ b/app/views/bookings/_form.html.slim
@@ -51,4 +51,4 @@
   
   .links
     = f.submit 'Gem'
-    = image_tag "loader.gif", alt: "", width: "32", height: "32", style: "display: none;", class: 'spinner'
+    = image_tag "loader.gif", :alt => "", :width => "32", :height => "32", :style => "display: none;", :class => 'spinner'
