create user spinner bug fixed

--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -41,6 +41,7 @@
       br/
 
     .action
-      = f.submit 'Opret konto', disable_with: 'Saving...'
-      = image_tag "loader.gif", alt: "", width: "32", height: "32", style: "display: none;", class: 'spinner'
+      = f.submit 'Opret konto'
+      -#= f.submit 'Opret konto', disable_with: 'Saving...'
+      -#= image_tag "loader.gif", alt: "", width: "32", height: "32", style: "display: none;", class: 'spinner'
 
