--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -55,7 +55,8 @@
 
 
     div class="actions top_margin_12"
-      = f.submit 'Gem', disable_with: 'Gemmer...'
-      = image_tag "loader.gif", alt: "", width: "32", height: "32", style: "display: none;", class: 'spinner'
+      = f.submit 'Gem'
+      -#= f.submit 'Gem', disable_with: 'Gemmer...'
+      -#= image_tag "loader.gif", alt: "", width: "32", height: "32", style: "display: none;", class: 'spinner'
 
 
