--- a/app/views/newsposts/_form.html.slim
+++ b/app/views/newsposts/_form.html.slim
@@ -27,6 +27,7 @@
       | Internt nyhed
     br   
     .actions
-        = f.submit 'Gem', disable_with: 'Gemmer...'
-        = image_tag "loader.gif", alt: "", width: "32", height: "32", style: "display: none;", class: 'spinner'
+      = f.submit 'Gem'
+      -#= f.submit 'Gem', disable_with: 'Gemmer...'
+      -#= image_tag "loader.gif", alt: "", width: "32", height: "32", style: "display: none;", class: 'spinner'
   
