--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -22,8 +22,8 @@
 </p>
 
 <p>
-  <b>Coffee and bread:</b>
-  <%= @booking.coffee_and_bread %>
+  <b>Kaffe og The:</b>
+  <%= @booking.coffee_and_tea %>
 </p>
 
 <p>
