--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -30,6 +30,8 @@ html
               = link_to 'admin', admin_path
               |  |  
               = link_to 'mødelokaler' , meetingrooms_path
+              |  | 
+              -#= link_to 'bookings', meetingroom_bookings_path(@meetingroom)
 
         = yield
         .clear
