--- a/app/views/newsposts/_form.html.slim
+++ b/app/views/newsposts/_form.html.slim
@@ -14,12 +14,12 @@
       = f.file_field :image
     br
     .field
-      | navn
+      'overskrift
       br
       = f.text_field :title
     br
     .field
-      = f.label :body
+      'tekst
   	br
       = f.text_area :body, :class => "mceEditor"
     br
