--- a/app/views/newsposts/new.html.erb
+++ b/app/views/newsposts/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New newspost</h1>
+<div class= "grid-12">
+	<h1>Opret nyhed</h1>
+</div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', newsposts_path %>
+
