--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -9,7 +9,7 @@
       = sortable t('user.email')
       -#= link_to 'email',:sort => "email"
     .grid-6.omega
-      = sortable 'role'
+      = sortable 'rolle'
       -#= link_to 'role',:sort => "role"
   hr/
 
