--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing booking</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @booking %> |
-<%= link_to 'Back', bookings_path %>
+<div class= "grid-container">
+  <h1>Reservation</h1>
+</div> 
+  <%= render 'form' %>
+  
