--- a/app/views/newsposts/edit.html.erb
+++ b/app/views/newsposts/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing newspost</h1>
-
+<div class= "grid-12">
+	<h1>Rediger nyhed</h1>
+</div>
 <%= render 'form' %>
 
-<%= link_to 'Show', @newspost %> |
-<%= link_to 'Back', newsposts_path %>
+
+
+
