--- a/app/views/company_thumbs/_form.html.slim
+++ b/app/views/company_thumbs/_form.html.slim
@@ -11,6 +11,6 @@
       | billed
       br
       = f.file_field :image
-    .actions
-      = f.submit
+    .actions.top_margin
+      = f.submit 'gem'
   
