--- a/app/views/bookings/edit.html.slim
+++ b/app/views/bookings/edit.html.slim
@@ -7,7 +7,7 @@
       .content
         = render 'form'
 
-        = link_to 'bookings', meetingroom_bookings_path(@meetingroom)
+        -#= link_to 'bookings', meetingroom_bookings_path(@meetingroom)
 
   .squared-box
     .borders
