--- a/app/views/companies/index.html.slim
+++ b/app/views/companies/index.html.slim
@@ -9,7 +9,10 @@
           -@companies.each do |company|
             .company-index
               .image
-                = link_to image_tag(company.image.url(:mini), :border => 'none', :class => 'image_fix'), company
+                - if company.company_thumbs.any?
+                  = link_to image_tag(company.company_thumbs.last.image.url(:mini), :border => 'none', :class => 'image_fix'), company 
+                - else
+                  = link_to image_tag(company.image.url(:mini), :border => 'none', :class => 'image_fix'), company 
               = link_to company.title, company
           = will_paginate @companies 
         - if can_edit?
