--- a/app/views/meetingrooms/show.html.slim
+++ b/app/views/meetingrooms/show.html.slim
@@ -7,9 +7,12 @@
       .content
         h1
           =raw @meetingroom.title
-        =raw @meetingroom.body      
-	    - if can?(:edit, @meetingroom)
-	      .text-right
+        =raw @meetingroom.body  
+        .text-right
+          - if can?(:create, Booking)  
+            = link_to 'book mødelokale', new_meetingroom_booking_path(@meetingroom), class: 'button'
+            br
+	      - if can?(:edit, @meetingroom)
 	        = link_to t('admin.edit'), edit_meetingroom_path(@meetingroom)
 	        |  | 
 	        = link_to t('admin.delete'), @meetingroom, :confirm => t('admin.are_you_sure'), :method => :delete
@@ -20,19 +23,8 @@
       div style="width:458px; height:376px; overflow:hidden"
         = image_tag @meetingroom.image.url(:preview), :border => 'none', :class => 'image_fix'
 
-  .bottom-box
-    .borders
-      .left-side
-        .menu-box
-          .menu-back
-            h2
-              | Booking
-        .booking-box
-          = link_to 'book mødelokale', new_meetingroom_booking_path(@meetingroom)
-          br
-          = link_to 'bookings', meetingroom_bookings_path(@meetingroom)
-      .right-side
-        | da
+
       
 
 
+= render :partial => "shared/news", :locals => { :newsposts => @newsposts }
