--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -43,5 +43,5 @@
     .action.top_margin
       = f.submit 'Opret konto'
       -#= f.submit 'Opret konto', disable_with: 'Saving...'
-      -#= image_tag "loader.gif", alt: "", width: "32", height: "32", style: "display: none;", class: 'spinner'
+      -#= image_tag "loader.gif", alt: "", width: "32", height: "32", style: "display: none;", :class => 'spinner'
 
