--- a/app/views/illustrations/_form.html.slim
+++ b/app/views/illustrations/_form.html.slim
@@ -19,4 +19,4 @@
 
   .actions.top_margin
     = f.submit t('admin.save'), disable_with: 'Saving...'
-    = image_tag "loader.gif", alt: "", width: "32", height: "32", style: "display: none;", class: 'spinner'
+    = image_tag "loader.gif", alt: "", width: "32", height: "32", style: "display: none;", :class => 'spinner'
