--- a/app/views/newsposts/_form.html.slim
+++ b/app/views/newsposts/_form.html.slim
@@ -29,5 +29,5 @@
     .actions
       = f.submit 'Gem'
       -#= f.submit 'Gem', disable_with: 'Gemmer...'
-      -#= image_tag "loader.gif", alt: "", width: "32", height: "32", style: "display: none;", class: 'spinner'
+      -#= image_tag "loader.gif", alt: "", width: "32", height: "32", style: "display: none;", :class => 'spinner'
   
