--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -57,6 +57,6 @@
     div class="actions top_margin_12"
       = f.submit 'Gem'
       -#= f.submit 'Gem', disable_with: 'Gemmer...'
-      -#= image_tag "loader.gif", alt: "", width: "32", height: "32", style: "display: none;", class: 'spinner'
+      -#= image_tag "loader.gif", alt: "", width: "32", height: "32", style: "display: none;", :class => 'spinner'
 
 
