--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -13,6 +13,10 @@
       br/
       = f.text_field :email
 
+    .field.top_margin
+      = f.label :company, t('user.company')
+      br/
+      = f.select(:company, Company.all.map { |company| [company.title, company.id] }, :include_blank => true)
 
     .field.top_margin
       - if current_user.super?
