--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -22,6 +22,11 @@
       = f.text_field :email
 
     .field
+      = f.label :company_id, t('user.company')
+      br/
+      = f.select(:company_id, Company.all.map { |company| [company.title, company.id] }, :include_blank => true)
+
+    .field
       = f.label :password
       br/
       = f.password_field :password
